fix footer spacing

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -20,6 +20,7 @@
 
 .cardano {
   height: 90px;
+  margin-top: 1rem;
 
   display: flex;
   flex-direction: column;
